<resources>
    <string name="app_name">Pay me App</string>
    <string name="your_debtors">Your debtors</string>
    <string name="add_new_debtor_button">Add new</string>
    <string name="debt_sum_text">Debt sum</string>
    <string name="sum_of_debts_desc">sum of debts</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="text_add_new_debtor">Add new debtor</string>
    <string name="text_edit_debtor">Edit debtor</string>
    <string name="edit_text_hint_name">Name</string>
    <string name="edit_text_PLN">PLN</string>
    <string name="field_text_hint">420</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_question">Are you sure to cancel?</string>
    <string name="cancel_info">This debtor will NOT be saved</string>
    <string name="enter_debtor_info">Please enter debtor name, phone number and sum owed</string>
    <string name="debt_too_small_info">Owed debt must be bigger then 0!</string>
    <string name="debtWithPln">%s PLN</string>
    <string name="textHoorayNoDebtors">Hooray! No debtors:)</string>
    <string name="remove_debt_from">Remove debt from %s</string>
    <string name="debt_cancel_inside_msg">%1$s ows you %2$s PLN, do you want to remove the debt?</string>
    <string name="remove_debt_btn_msg">Remove debt</string>
    <string name="debt_removed">Debt removed</string>
    <string name="Cancel_msg">Cancel</string>
    <string name="Save_msg">Save</string>
    <string name="Saved_msg">Saved</string>
    <string name="notify_debtor">Notify</string>
    <string name="simulate_payment">Simulate\npayment</string>
    <string name="phone_number">phone number</string>
    <string name="debt_payment_simulation">Debt payment simulation</string>
    <string name="textview">TextView</string>
    <string name="textviewDebt">TextView</string>
    <string name="payment_speed_rate">Payment speed rate</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="interest_rate">Interest rate in %</string>
    <string name="payRateRequired">Pay rate is required</string>
    <string name="CommissionRequired">Commission is required and must be bigger than 0</string>
    <string name="smsBody">sms_body</string>
    <string name="oweMoneyMsg">Hi, you owe me %s PLN, please give it back or I\'m calling the police 🚓🚨🚨🚨👮</string>
    <string name="smsNumberToParse">sms:%s</string>
    <string name="basicInfo">Name: %1s\nPhone number: %2s"</string>
    <string name="simDebt">Debt value is %s PLN</string>
</resources>
